--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "graphql-tag": "^2.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "react-spinners": "^0.9.0",
     "realm-web": "^0.8.1",
     "validator": "^13.1.1"
@@ -51,5 +51,8 @@
   },
   "devDependencies": {
     "prettier": "^2.1.2"
+  },
+  "resolutions": {
+    "webpack-dev-server": "^3.11.2"
   }
 }
